docs/7.52/md/abapenhancement.md
---
title: "ENHANCEMENT"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement_shortref.htm) Syntax ENHANCEMENT id. ... ENDENHANCEMENT. Effect These statements define a source code plug-in(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensource_code_plugin_glosry.htm 'G
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement.htm"
abapFile: "abapenhancement.htm"
keywords: ["do", "try", "abapenhancement"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Enhancements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_framework.htm) →  [Source Code Enhancements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensource_code_enhancement.htm) →  [enhancement implementation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenh_implementation.htm) → 

ENHANCEMENT

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement_shortref.htm)

Syntax

ENHANCEMENT id.
  ...
ENDENHANCEMENT.

Effect

These statements define a [source code plug-in](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensource_code_plugin_glosry.htm "Glossary Entry") with the ID id. A [source code enhancement](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensource_code_enhancement_glosry.htm "Glossary Entry") can be implemented between the statements. The [control structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontrol_structure_glosry.htm "Glossary Entry") and [processing blocks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprocessing_block_glosry.htm "Glossary Entry") used in the implementation must be complete.

The statements ENHANCEMENT and ENDENHANCEMENT cannot be entered and edited directly. Instead, they are generated by [ABAP Workbench](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_workbench_glosry.htm "Glossary Entry") when [enhancements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_glosry.htm "Glossary Entry") are created as part of the [enhancement concept](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_concept_glosry.htm "Glossary Entry"). The ID id is also assigned by the workbench.

Notes

-   In the terminology of the [enhancement concept](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_concept_glosry.htm "Glossary Entry"), a source code plug-in is an [enhancement implementation element](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_impl_elem_glosry.htm "Glossary Entry") of a (simple) [enhancement implementation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensimple_enhancement_impl_glosry.htm "Glossary Entry").
    
-   Although source code plug-ins are displayed in the same source code as the corresponding [enhancement points](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_point_glosry.htm "Glossary Entry") [ENHANCEMENT-POINT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-point.htm) or [ENHANCEMENT-SECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-section.htm), they are actually stored in other [include programs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninclude_program_glosry.htm "Glossary Entry") that are managed by [Enhancement Builder](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenhancement_builder_glosry.htm "Glossary Entry").
    
-   It is possible to enhance a source code plug-in using further source code plug-ins. This means that, from then onwards, the statements [ENHANCEMENT-POINT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-point.htm) and [ENHANCEMENT-SECTION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapenhancement-section.htm) can be used between ENHANCEMENT and ENDENHANCEMENT.